@@ -1,0 +1,21 @@
+(library
+  (name boot)
+  (kind ppx_rewriter)
+  (preprocess (pps ppxlib.metaquot))
+; +warning 32: Unused value declaration.
+; +warning 34: Unused type declaration.
+; -warning 40: Constructor or label name used out of scope. (OCaml <=4.06.0)
+  (flags -open Stdcompat -w +32+34-40)
+  (libraries compiler-libs.common ppxlib stdcompat ast_wrapper))
+
+(rule
+  (targets boot.ml)
+  (deps ../src/override.ml)
+  (action
+     (copy# %{deps} %{targets})))
+
+(rule
+  (targets core_type_equiv.mli)
+  (deps ../core_type_equiv/core_type_equiv.mli)
+  (action
+     (copy# %{deps} %{targets})))
