@@ -1,0 +1,3 @@
+val equiv_core_type :
+    (Parsetree.core_type -> Parsetree.core_type -> bool) ->
+      Parsetree.core_type -> Parsetree.core_type -> bool
