@@ -1,0 +1,5 @@
+(library
+  (name core_type_equiv)
+  (public_name override.core_type_equiv)
+  (preprocess (staged_pps boot ppxlib.metaquot ppx_deriving.eq))
+  (libraries compiler-libs.common))
