@@ -6,4 +6,4 @@
 ; +warning 34: Unused type declaration.
 ; -warning 40: Constructor or label name used out of scope. (OCaml <=4.06.0)
   (flags -open Stdcompat -w +32+34-40)
-  (libraries compiler-libs.common ppxlib stdcompat))
+  (libraries compiler-libs.common ppxlib stdcompat ast_wrapper core_type_equiv))
